working sample with id.conube.com.br

--- a/examples/express2/views/login.ejs
+++ b/examples/express2/views/login.ejs
@@ -1,11 +1,11 @@
 <form action="/login" method="post">
 	<div>
 	<label>Username:</label>
-	<input type="text" name="username"/><br/>
+	<input type="text" name="username" value="gabrielm@mailinator.com"/><br/>
 	</div>
 	<div>
 	<label>Password:</label>
-	<input type="password" name="password"/>
+	<input type="password" name="password" value="123123"/>
 	</div>
 	<div>
 	<input type="submit" value="Submit"/>
